feat: added hero section

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -15,6 +15,10 @@
   box-sizing: border-box;
 }
 
+body{
+    /* color: var(--text-color) */
+}
+
 .container{
     max-width: 1200px;
     margin: 0 auto;
@@ -82,4 +86,60 @@ font-size: 2rem;
 
 .hamburger{
     display: none;
+}
+
+
+
+.hero{
+    height: 60vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../imge/looking_people.jpg');
+    background-size: cover;
+    background-position: center;
+
+}
+
+.hero-content{
+    max-width: 800px;
+    padding: 0 20px;
+}
+
+.hero-content h1{
+    font-size: 3rem;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    color:white;
+}
+
+.hero-content p{
+    font-size:1.2rem;
+    margin-bottom: 30px;
+    color:white;
+}
+
+.btn{
+   display:inline-block;
+   padding: 12px 30px; 
+   background:var(--accent-color);
+   color:var(--dark-color);
+   text-decoration: none;
+   border:none;
+   font-weight: 600;
+   border-radius: 50px;
+   letter-spacing: 1px;
+   text-transform: uppercase;
+   box-shadow: var(--shadow);
+   transition: var(--transition);
+
+}
+
+
+.btn:hover{
+    transform:translate(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+
 }
