--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -237,3 +237,130 @@ padding: 50px 0;
 .card-link:hover{
     color:var(--primary-color);
 }
+
+.footer{
+    background: linear-gradient(to right, var(--dark-color),#3a3a3a);
+    color:white;
+    padding: 50px 0 20px;
+    margin-top: 50px;
+}
+
+.footer-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    gap: 40px;
+    margin-bottom: 40px;
+}
+
+.footer-column h3{
+    font-size: 1.3rem;
+    margin-bottom: 20px;
+
+}
+
+.footer-column h3::after{
+    content: " ";
+    width: 50px;
+    height: 3px;
+    display: block;
+    background:var(--accent-color);
+    margin-top: 10px;
+    border-radius: 2px;
+}
+
+.social-link{
+    display: flex;
+    gap: 15px;
+    margin-top: 20px;
+}
+
+.social-icon{
+    width: 40px;
+    height: 40px;
+    background:rgba(255,255,255,0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: white;
+    text-decoration: none;
+    transition: var(--transition);
+
+}
+.social-icon:hover{
+    background: var(--accent-color);
+    transform: translateY(-10px);
+}
+
+.footer-links{
+list-style: none;
+}
+
+.footer-links li{
+    margin-bottom: 12px;
+}
+
+.footer-links li a{
+    color:#ccc;
+    text-decoration: none;
+    transition: var(--transition);
+
+
+}
+
+.footer-links li a:hover{
+    color:var(--accent-color);
+    padding-left: 5px;
+}
+
+.contact-info{
+margin-bottom: 20px;
+
+}
+.contact-item{
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.contact-icon{
+    margin-right: 10px;
+    color: var(--accent-color);
+}
+
+
+.newsletter-form{
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.newletter-input{
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+   outline:none;
+}
+
+.newsletter-btn{
+    background: var(--accent-color);
+    color:var(--dark-color);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.newsletter-btn:hover{
+    background: var(--secondary-color);
+    color: white;
+}
+
+ 
+.footer-bottom{
+    text-align: center;
+    padding-top:20px;
+    border-top:2px solid rgba(255,255,255,0.1)
+
+}
